web page is working

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,13 +22,13 @@
     <!-- Load AngularJS -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script type="text/javascript">
-      var app = angular.module("FruitManagement", []);
+      var app = angular.module("AdjectiveManagement", []);
 
       //Controller Part
-      app.controller("FruitManagementController", function ($scope, $http) {
+      app.controller("AdjectiveManagementController", function ($scope, $http) {
 
         //Initialize page with default data which is blank in this example
-        $scope.fruits = [];
+        $scope.adjectives = [];
 
         $scope.form = {
           id: -1,
@@ -44,15 +44,15 @@
           var url = "";
           var data = {};
           if ($scope.form.id == -1) {
-            //Id is absent so add fruits - POST operation
+            //Id is absent so add adjectives - POST operation
             method = "POST";
-            url = '/api/fruits';
-            data.name = $scope.form.name;
+            url = '/api/adjectives';
+            data.body = $scope.form.body;
           } else {
             //If Id is present, it's edit operation - PUT operation
             method = "PUT";
-            url = '/api/fruits/' + $scope.form.id;
-            data.name = $scope.form.name;
+            url = '/api/adjectives/' + $scope.form.id;
+            data.body = $scope.form.body;
           }
 
           $http({
@@ -65,18 +65,18 @@
           }).then(_success, _error);
         };
 
-        //HTTP DELETE- delete fruit by id
+        //HTTP DELETE- delete adjective by id
         $scope.remove = function (fruit) {
           $http({
             method: 'DELETE',
-            url: '/api/fruits/' + fruit.id
+            url: '/api/adjectives/' + fruit.id
           }).then(_success, _error);
         };
 
         //In case of edit fruits, populate form with fruit data
-        $scope.edit = function (fruit) {
-          $scope.form.name = fruit.name;
-          $scope.form.id = fruit.id;
+        $scope.edit = function (adjective) {
+          $scope.form.body = adjective.body;
+          $scope.form.id = adjective.id;
         };
 
           /* Private Methods */
@@ -84,9 +84,9 @@
         function _refreshPageData() {
           $http({
             method: 'GET',
-            url: '/api/fruits'
+            url: '/api/adjectives'
           }).then(function successCallback(response) {
-            $scope.fruits = response.data;
+            $scope.adjectives = response.data;
           }, function errorCallback(response) {
             console.log(response.statusText);
           });
@@ -103,36 +103,36 @@
 
         //Clear the form
         function _clearForm() {
-          $scope.form.name = "";
+          $scope.form.body = "";
           $scope.form.id = -1;
         }
       });
     </script>
 </head>
-<body ng-app="FruitManagement" ng-controller="FruitManagementController">
+<body ng-app="AdjectiveManagement" ng-controller="AdjectiveManagementController">
 
 <div class="container">
     <h1>CRUD Mission - Spring Boot</h1>
     <p>
-        This application demonstrates how a Spring Boot application implements a CRUD endpoint to manage <em>fruits</em>.
-        This management interface invokes the CRUD service endpoint, that interact with a ${db.name} database using JDBC.
+        This application demonstrates how a Spring Boot application implements a CRUD endpoint to manage <em>adjectives</em>.
+        This management interface invokes the CRUD service endpoint, that interact with a ${db.adjective} database using JDBC.
     </p>
 
-    <h3>Add/Edit a fruit</h3>
+    <h3>Add/Edit an adjective</h3>
     <form ng-submit="update()">
         <div class="row">
-            <div class="col-6"><input type="text" placeholder="Name" ng-model="form.name" size="60"/></div>
+            <div class="col-6"><input type="text" placeholder="Name" ng-model="form.body" size="60"/></div>
         </div>
         <input type="submit" value="Save"/>
     </form>
 
-    <h3>Fruit List</h3>
+    <h3>Adjective List</h3>
     <div class="row">
         <div class="col-2">Name</div>
     </div>
-    <div class="row" ng-repeat="fruit in fruits">
-        <div class="col-2">{{ fruit.name }}</div>
-        <div class="col-8"><a ng-click="edit( fruit )" class="btn">Edit</a> <a ng-click="remove( fruit )" class="btn">Remove</a>
+    <div class="row" ng-repeat="adjective in adjectives">
+        <div class="col-2">{{ adjective.body }}</div>
+        <div class="col-8"><a ng-click="edit( adjective )" class="btn">Edit</a> <a ng-click="remove( adjective )" class="btn">Remove</a>
         </div>
     </div>
 </div>
