database initialization works locally

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,7 +38,7 @@
         //Now load the data from server
         _refreshPageData();
 
-        //HTTP POST/PUT methods for add/edit fruits
+        //HTTP POST/PUT methods for add/edit adjectives
         $scope.update = function () {
           var method = "";
           var url = "";
